@@ -1,0 +1,176 @@
+rhino sting
+ModPlug Tracker 1.16 XM 1.04
+17 97 6 8 1 12 120 14 0 64
+0 1 2 3 4 5 6 9 15 13 11 15 13 15
+64 1 0 zinger/they&bktr
+1 9 0 8 0 8 8
+0 58 7 41 15 29 27 18 39 11 58 6 82 3 121 1 170 0
+0 0 0 0 0 0 0
+4 5 0 1 0 0 4
+0 63 5 63 6 0 13 0 14 63
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 128 9 -72 0 16 20 2 0 0 0 0 0 0 0
+64 0 0 xkcompo 2k4
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+256 0 1 2 3 4 5
+51 6 7 8 9 10 11
+96 12 13 14 15 16 17
+96 18 19 20 21 22 23
+96 24 25 26 27 28 29
+96 30 31 32 33 34 35
+10 36 37 38 39 40 41
+12 42 43 44 45 46 47
+32 48 49 50 51 52 53
+4 54 55 56 57 58 59
+32 60 61 62 63 64 65
+32 66 67 68 69 70 71
+32 72 73 74 75 76 77
+32 78 79 80 81 82 83
+64 84 85 86 87 88 89
+32 90 91 92 93 94 95
+64 96 96 96 96 96 96
+256 3634c276623d2df820b10d0dc76f8637
+256 5808a6222bbbb5deeb9cc658e30ac474
+256 7847c250ead6d11a91be51c8b3893d50
+256 a65084ac04d31c530839021f9b04eb67
+256 bf58b67dfc7b74ed14e0dea62e025de3
+256 97f3b6f925a07ebfb844486e2bdbc791
+51 94bc443688f8ad3bee7913ad7ec086a5
+51 f0f796943a7fbb49d2b783ed0b7e342a
+51 dc360eb3f1e8d2f0f7daf116210e8336
+51 965521e26744b7b21bd8d26aba4684bd
+51 fe63ffa58c6e09d29677180d8b080522
+51 249414881921ff1f4423b7e2b7ceda43
+96 50809c55e6dd37446c0fc5d9a04c81e2
+96 0254c8fe28b590a49af822a5385c9f92
+96 884237523ae9a746e7555346a7f83180
+96 959ab9c566634afde64a7560b5eb9230
+96 dd6be4b17c915ff2a638bf3c325017ff
+96 b8542af10fa3c7a8c9b23c862153a5f8
+96 50809c55e6dd37446c0fc5d9a04c81e2
+96 0254c8fe28b590a49af822a5385c9f92
+96 884237523ae9a746e7555346a7f83180
+96 4e25062f01b86e8c18aa63cf26dde55d
+96 dd6be4b17c915ff2a638bf3c325017ff
+96 cd3f35a7cc63ca7ef40fb27c39f53853
+96 12943ce02becd740ec8c2dd96aacd357
+96 ecaf70faab8ae6346088741a67768e1c
+96 26437a7f6b0d5b2571dd34ae71d410f3
+96 a02e432b0fbd01bf4e7cd829d6121290
+96 0b6a134cf4b845c6812bfd80edebb194
+96 9a089cfbe60e22a15acf71fb5d131447
+96 12943ce02becd740ec8c2dd96aacd357
+96 ecaf70faab8ae6346088741a67768e1c
+96 26437a7f6b0d5b2571dd34ae71d410f3
+96 ace3bf501ee3ee0ce212f1f23591db5f
+96 28f47060f8cd14052e5e897fc7407889
+96 98f01b1e871015bb2be3d8c4f4f4090d
+10 ac2ad5180a4d450823da601f01309c5d
+10 bbf7c6077962a7c28114dbd10be947cd
+10 bbf7c6077962a7c28114dbd10be947cd
+10 7dd13d4f788f93b4e22a5ab9b0872f7a
+10 cadda2af2b6c40cf0ca7f3529dc4faf0
+10 7690213934e2d15d9faab759d5bf6650
+12 aceb486e7e4b2d2f1c5f2328b503502b
+12 aceb486e7e4b2d2f1c5f2328b503502b
+12 aceb486e7e4b2d2f1c5f2328b503502b
+12 aceb486e7e4b2d2f1c5f2328b503502b
+12 aceb486e7e4b2d2f1c5f2328b503502b
+12 aceb486e7e4b2d2f1c5f2328b503502b
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 9a143800aaae16969cdb39f01d8ead25
+4 70bc8f4b72a86921468bf8e8441dce51
+4 70bc8f4b72a86921468bf8e8441dce51
+4 70bc8f4b72a86921468bf8e8441dce51
+4 70bc8f4b72a86921468bf8e8441dce51
+4 70bc8f4b72a86921468bf8e8441dce51
+4 70bc8f4b72a86921468bf8e8441dce51
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 706270521e7fba3838dff7071ef01547
+32 b5b003e792b06a02168272b1fc024447
+32 b51e75aa648d339d91d43af4ff786253
+32 9d2d00a6f96fb553e3bb2e1046037863
+32 3baf8a9bc38f9b50439e16ae434658fb
+32 c347c947821e0e2f988bfb184614eece
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 348a9791dc41b89796ec3808b5b5262f
+32 b660b77869cfffce78d64db859cb16a6
+32 b5b003e792b06a02168272b1fc024447
+32 c7d6ff99af4e305512fe5ff7ca56ce96
+32 dc6c70662c96cca31dcf0ec394a0e93d
+32 d86bb19d26d7f9069942ab499cfe2cf4
+32 9ddd5d2994fdacc0c138bc7f30997a99
+64 36012c875c78adddf3b7935f8a1195df
+64 b3449e7fedd2f8b7193bc260dfa24ef9
+64 e7b0ce13687a891cb9c5abf7c9188e41
+64 aee0cd1df004d4b7123ccbf922f4ce70
+64 7be95e831b24ff17285e627674fe2ad6
+64 37d56af37126e6d1e67659aacd72490d
+32 706270521e7fba3838dff7071ef01547
+32 41fb3c413a9bd80221bf413134df142c
+32 5d1e789ea8b057d51a3cc754b983bbc1
+32 9d2d00a6f96fb553e3bb2e1046037863
+32 3baf8a9bc38f9b50439e16ae434658fb
+32 e01980bae4a8dba65eaf67d7bf40ae03
+64 bf619eac0cdf3f68d496ea9344137e8b
+184 73 183 2 5d7386dfddc1a257dfe9e72c47c04f27 <skuter sample>
+128 64 0
+128 64 0
+128 64 0
+128 64 0
+128 64 0
+128 64 0
